# simple-file-sharing

./: Cargo.toml
actix-ws-mod/src/: fut.rs  lib.rs
frontend/: .env  .eslintrc.cjs  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/stores/: uploads.ts  user.ts
frontend/src/utils/: control.ts  event_bus.ts  file_uploader.ts
frontend/src/views/: DownloadDialog.vue  FileListView.vue  HomeView.vue  LoginDialog.vue  NewFolderDialog.vue  UploadDialog.vue
migrations/0_create_schema/: up.sql
src/: api.rs  control.rs  db.rs  file_ops.rs  listdir.rs  main.rs  models.rs  safe_path.rs  schema.rs  state.rs  tls.rs  user.rs
src/api/: download.rs  mod.rs  upload.rs
