[package]
name = "simple-file-sharing"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-ws = "0.2.5"
anyhow = "1.0.70"
async-std = "1.12.0"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
