[package]
name = "simple-file-sharing"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = ["rustls"] }
actix-ws = { path = "./actix-ws-mod" }
anyhow = "1.0.70"
async-std = "1.12.0"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
r2d2 = "0.8.10"
rand = "0.8.5"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.95"
sodiumoxide = "0.2.7"
thiserror = "1.0.40"
uuid = "1.3.0"
